--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "description": "Check if there is a newer version of Node.js than the one that is installed on the machine.",
   "main": "index.js",
   "author": "Vladimir Jovanović",
+  "scripts": {
+    "postinstall": "node index"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/VladimirDev93/node-checker"
