--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "node-checker",
-  "productName": "Node.js Checker",
-  "version": "1.0.3",
+  "name": "gimme-new-node",
+  "productName": "Gimme new node",
+  "version": "1.0.4",
   "description": "Check if there is a newer version of Node.js than the one that is installed on the machine.",
   "main": "index.js",
   "author": "Vladimir Jovanović",
