--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "gimme-new-node",
   "productName": "Gimme new node",
-  "version": "1.0.4",
+  "version": "1.1.0",
   "description": "Check if there is a newer version of Node.js than the one that is installed on the machine.",
   "main": "index.js",
   "author": "Vladimir Jovanović",
   "scripts": {
-    "postinstall": "node index"
+    "start": "node -r esm index",
+    "postinstall": "node -r esm index"
   },
   "repository": {
     "type": "git",
@@ -18,8 +19,9 @@
   "license": "MIT",
   "dependencies": {
     "auto-launch": "^5.0.5",
-    "node-fetch": "^2.2.0",
-    "node-notifier": "^5.2.1",
-    "opn": "^5.3.0"
+    "esm": "^3.0.84",
+    "node-fetch": "^2.3.0",
+    "node-notifier": "^5.3.0",
+    "opn": "^5.4.0"
   }
 }
